Fix upload on safari and IE
Add auto scroll margin on confirmation of form

--- a/src/modules/file_upload/file_upload.scss
+++ b/src/modules/file_upload/file_upload.scss
@@ -32,6 +32,7 @@
       color: $colorBlack60;
       text-align: center;
       margin-top: 0;
+      max-width: 100%;
     }
 
     &-hint {
